--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,6 +16,10 @@ body {
     background: #fefffc;
 }
 
+nav {
+    user-select: none;
+}
+
 nav ul {
     list-style: none;
     margin: 0;
@@ -86,4 +90,70 @@ footer {
     padding: 4px;
     border-top: 2px solid #babcb9;
     background: linear-gradient(#f6f6f6, #dbdbdb);
+    user-select: none;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    margin: 1rem 0;
+    font-size: 0.95em;
+}
+
+table th,
+table td {
+    border: 1px solid #babcb9;
+    padding: 6px 10px;
+    text-align: left;
+}
+
+table th {
+    background: #f6f6f6;
+    font-weight: bold;
+}
+
+.table-container {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+}
+.table-container table {
+    min-width: 600px;
+}
+
+@media (max-width: 500px) {
+    table,
+    thead,
+    tbody,
+    th,
+    td,
+    tr {
+        display: block;
+    }
+
+    thead {
+        display: none;
+    }
+
+    tr {
+        margin-bottom: 1rem;
+        border: 1px solid #babcb9;
+    }
+
+    td {
+        background: linear-gradient(#f6f6f6, #dbdbdb);
+
+        border: none;
+        padding: 0.25rem 0;
+    }
+
+    td::before {
+        content: attr(data-label);
+        font-weight: bold;
+        display: block;
+    }
+}
+
+::selection {
+    background: #ffea9c;
+    color: #010100;
 }
