--- a/themes/BeLEAF/assets/css/main.css
+++ b/themes/BeLEAF/assets/css/main.css
@@ -215,17 +215,24 @@ table th {
 }
 
 .section-thumb {
-    width: 140px;
-    height: 105px;
+    width: 120px;
+    height: 90px;
     object-fit: cover;
     object-position: center;
     flex-shrink: 0;
     margin-right: 4px;
 }
-
 .section-text {
-    padding: 0;
-    line-height: 1.2;
+    display: flex;
+    flex-direction: column;
+}
+
+.section-text h4 {
+    margin: 0 0 0.5rem 0;
+}
+
+.section-text p {
+    margin: 0;
 }
 
 .page-title {
