--- a/themes/BeLEAF/layouts/section.html
+++ b/themes/BeLEAF/layouts/section.html
@@ -2,7 +2,13 @@
     {{ .Content }}
     {{ range .Pages }}
         <div class="section-card">
-            {{ with .Resources.GetMatch "*.png" }}
+            {{ with .Resources.GetMatch "*.webp" }}
+              <img src="{{ .RelPermalink }}" alt="{{ $.Title }}" class="section-thumb">
+            {{ else with .Resources.GetMatch "*.png" }}
+              <img src="{{ .RelPermalink }}" alt="{{ $.Title }}" class="section-thumb">
+            {{ else with .Resources.GetMatch "*.jpg" }}
+              <img src="{{ .RelPermalink }}" alt="{{ $.Title }}" class="section-thumb">
+            {{ else with .Resources.GetMatch "*.jpeg" }}
               <img src="{{ .RelPermalink }}" alt="{{ $.Title }}" class="section-thumb">
             {{ end }}
             <div class="section-text">
