navbar hover styling

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -205,6 +205,10 @@ nav a.active::after {
     );
 }
 
+nav li:hover {
+    filter: brightness(0.9);
+}
+
 /* navigation submenu */
 nav li ul {
     display: none;
